src/test/deca/context/invalid/provided/invalid_comparison_object_primitive_error.deca
// Description:
//    Une comparaison est effectuée entre un objet et un type primitif.
//
// Résultats:
//    invalid_comparison_object_primitive_error.deca:16:25: Operator ' == ' is not applicable to those types : A and int
//
// Historique:
//    créé le 19/01/2025
class A {
    int value = 10;
}

class B {
    void test() {
        A obj = new A();
        boolean result = obj == 10; 
    }
}
